src/objects/Equipment__c.object
<CustomObject>
    <description>What gear are we using, and where is it?</description>
    <fields>
        <fullName>Account_of_Location__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account of Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_of_Location__c</fullName>
        <formula>Deposition_Location__r.Location_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address of Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who currently has the equipment?</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Deposition__c</fullName>
        <formula>Deposition_Location__r.Deposition__r.Deposition_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Deposition</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposition_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deposition Location</label>
        <referenceTo>Deposition_Location__c</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposition__c</fullName>
        <formula>HYPERLINK(Deposition_Location__r.Deposition__c, Deposition_Location__r.Deposition__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Send_Tracking__c</fullName>
        <formula>HYPERLINK(&quot;http://wwwapps.ups.com/WebTracking/processInputRequest?HTMLVersion=5.0&amp;sort_by=status&amp;loc=en_US&amp;InquiryNumber1=&quot;&amp;Send_Tracking__c&amp;&quot;&amp;track.x=32&amp;track.y=7&quot;, &quot;Send&quot;) &amp; &quot; and &quot; &amp;

HYPERLINK(&quot;http://wwwapps.ups.com/WebTracking/processInputRequest?HTMLVersion=5.0&amp;sort_by=status&amp;loc=en_US&amp;InquiryNumber1=&quot;&amp; Receive_Tracking__c  &amp; &quot;&amp;track.x=32&amp;track.y=7&quot;, &quot;Receive&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tracking Links</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Receive_Tracking__c</fullName>
        <externalId>true</externalId>
        <label>Receive Tracking</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Tracking__c</fullName>
        <externalId>true</externalId>
        <label>Send Tracking</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Timestamp__c</fullName>
        <description>The shipper and shipping time.</description>
        <label>Shipping Timestamp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employees</fullName>
                    <default>true</default>
                    <label>Employees</label>
                </value>
                <value>
                    <fullName>In Transit</fullName>
                </value>
                <value>
                    <fullName>On Location</fullName>
                </value>
                <value>
                    <fullName>Long Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Equipment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date_of_Deposition__c</columns>
        <columns>Contact__c</columns>
        <columns>Deposition__c</columns>
        <columns>Receive_Tracking__c</columns>
        <columns>Send_Tracking__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Kit {0}</displayFormat>
        <label>Kit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>